[gd_scene load_steps=3 format=3 uid="uid://cx8u2j55v15u7"]

[ext_resource type="Theme" uid="uid://bhules4vvoytk" path="res://Themes/GraphNodeTheme.tres" id="1_r67yu"]
[ext_resource type="Script" path="res://Scenes/CreateStory/ChoiceBox.gd" id="2_rvmjr"]

[node name="ChoiceBox" type="GraphNode" node_paths=PackedStringArray("background_menu_button", "sound_menu_button1", "sound_menu_button2")]
custom_minimum_size = Vector2(300, 0)
offset_left = 363.0
offset_top = 143.0
offset_right = 539.0
offset_bottom = 198.0
mouse_filter = 1
theme = ExtResource("1_r67yu")
title = "Choice Box"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color(1, 1, 1, 1)
slot/6/left_icon = null
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color(1, 1, 1, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
script = ExtResource("2_rvmjr")
background_menu_button = NodePath("BackgroundImageContainer/SetBackgroundButton")
sound_menu_button1 = NodePath("SoundButtonContainer/SoundButton1")
sound_menu_button2 = NodePath("SoundButtonContainer/SoundButton2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = " Name:"

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "X"

[node name="NameMenu" type="MenuButton" parent="."]
layout_mode = 2
text = "Choose Character"
flat = false

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = " Dialog:"

[node name="DialogInput" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="BackgroundImageContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="BackgroundImageContainer"]
layout_mode = 2
text = "Background Image:"

[node name="SetBackgroundButton" type="MenuButton" parent="BackgroundImageContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "None"
flat = false

[node name="SoundButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label3" type="Label" parent="SoundButtonContainer"]
layout_mode = 2
text = "Sound:"

[node name="SoundButton1" type="MenuButton" parent="SoundButtonContainer"]
layout_mode = 2
text = "None"
flat = false

[node name="SoundButton2" type="MenuButton" parent="SoundButtonContainer"]
layout_mode = 2
text = "None"
flat = false

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Choices:"

[node name="AddChoiceButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "+Add Choice"

[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="HBoxContainer2/AddChoiceButton" to="." method="_on_add_choice_button_pressed"]
